rps/k8s/client.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rps-client-deployment
spec:
  selector:
    matchLabels:
      app: rpsclient
      tier: frontend
      # track: unstable
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: rpsclient
        tier: frontend
        # track: unstable
    spec:
      containers:
      - name: hello
        image: gcr.io/YOUR-sandbox/rpsclient:latest
        ports:
        - containerPort: 5001
