rps/k8s/server.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rps-server-deployment
spec:
  selector:
    matchLabels:
      app: rpsserver
      tier: backend
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: rpsserver
        tier: backend
    spec:
      containers:
      - name: hello
        image: gcr.io/YOUR-sandbox/rpsserver:latest
        ports:
        - containerPort: 5000
