rps/k8s/service-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: rpsserver
spec:
  type: NodePort
  selector:
    app: rpsserver
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
