rps/k8s/service-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: rpsclient
spec:
  type: NodePort
  selector:
    app: rpsclient
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
