rps/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rps-ingress
spec:
  backend:
    serviceName: rpsclient
    servicePort: 80
